2004-09-25  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Add new 2.0 GetMethods and GetFields methods.

	* ParameterInfo.cs: Add GetPseudoCustomAttributes () method.

2004-09-24  Zoltan Varga  <vargaz@freemail.hu>

	* MonoField.cs: Add GetFieldOffset.

	* ObfuscationAttribute.cs: Add ApplyToMembers.

	* Assembly.cs: Add stub for ReflectionOnlyLoadFrom.
	
	* Assembly.cs (LoadWithPartialName): Add [ComVisible] attribute.

	* MonoMethod.cs FieldInfo.cs: Add GetPseudoCustomAttributes () method.

	* AssemblyNameFlags.cs: Add LongevityUnspecified.

2004-09-23  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Remove [MonoTODO] from ResolveMember.

	* MemberInfo.cs: Add 'Module' property.

	* AssemblyFlagsAttribute.cs: Add 2.0 stuff.

	* Assembly.cs: Add stubs for ReflectionOnlyLoad methods. Add [Obsolete]
	to LoadWithPartialName on 2.0.

	* AssemblyNameFlags.cs: Add new 2.0 members.

	* FieldInfo.cs MonoField.cs PropertyInfo.cs ParameterInfo.cs MonoProperty.cs: Add stubs for Optinal/RequiredCustomModifiers.

	* ObfuscationAttribute.cs ObfuscateAssemblyAttribute.cs: New files.

	* EventInfo.cs: Fix 2.0 build.

	* MonoEvent.cs (MonoEventInfo): Add 'other_methods' field.

	* EventInfo.cs MonoEvent.cs: Add NET 2.0 GetOtherMethods method.

2004-09-22  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Implement net 2.0 ResolveXXX methods.

	* Module.cs (resolve_token_exception): Fix type of exception thrown.

2004-09-21  Martin Baulig  <martin@ximian.com>

	* Assembly.cs (MonoDebugger_CheckRuntimeVersion): New internal method.

2004-09-20  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Implement 2.0 reflection properties.

	* Module.cs: Implement 2.0 reflection properties. Add 'token' field.

2004-09-19  Zoltan Varga  <vargaz@freemail.hu>

	* PortableExecutableKind.cs ImageFileMachine.cs: Make this internal
	under 1.0.

	* MemberInfo.cs ParameterInfo.cs: Add MetadataToken property.

	* Module.cs: Add ModuleHandle property and new icalls.
